2008-04-03  Dmitry Xmelkov  <dmix@gmail.ru>

	* tests/simulate/regression/bug-22800.c: New file.

2008-04-01  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom32u4.h: Add UEBCX 16-bit register. This is not 
	defined as per the datasheet or XML file. However, in talking with
	the USB team, the contents of the registers are supposed to be read-only 
	and static. Because of this it makes sense to add this as a convenience 
	to the end-user as long the user realizes that the read is not done with
	a temporary 8-bit register. 

2008-03-31  Eric B. Weddington  <eric.weddington@atmel.com>

        * include/avr/iom32u4.h: Add alias register definition TC4H, per Atmel.

2008-03-30  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #22785.
	* include/avr/sleep.h: Add support for ATmega644P, ATmega1284P, 
        ATmega32HVB, ATtiny88, ATmega48P, ATmega88P, ATmega168P, ATmega328P,
        AT90PWM2B, AT90PWM3B, ATtiny48, ATtiny43U, AT90PWM216, AT90PWM316.
	* NEWS: Add to fixed bug list.

2008-03-29  Dmitry Xmelkov  <dmix@gmail.ru>

	* libm/fplib/frexp.S: Avoid indirect write to R0,R1 with XMEGA.
	
	* tests/simulate/runtest.sh: Remove avr-gcc path and version output
	(With Eric's agree).  Roll too line source line.

2008-03-28  Eric B. Weddington  <eric.weddington@atmel.com>

	* eeprom.h: Re-add the eeprom_busy_wait macro that was accidentally removed.

2008-03-26  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iox128a1.h: Fix constants, add fuse, lockbit information.
	* include/avr/iox64a1.h: Ditto.
	* include/avr/fuse.h: Add documentation about fuse default value macros.
	* include/avr/lock.h: Add new lockbit groups and values for XMEGA.

2008-03-25  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Add support for ATtiny167.
	* devtools/gen-avr-lib-tree.sh: Ditto.
	* include/avr/Makefile.am: Ditto.
	* include/avr/io.h: Ditto.
	* doc/api/main_page.dox: Ditto.
	* doc/api/using-tools.dox: Ditto.